2010-05-10 Sergio Martin  <sergio.martin@artica.es>

	* operation/messages/message.php: Fixed the messages
	over the header for bug: 2993495

2010-05-10 Sergio Martin  <sergio.martin@artica.es>

	* godmode/agentes/massive_edit_modules.php: Fixed the
	massive change of user and password. Also the change of
	the export target and historical data was disable. Now
	are fixed too. Bug: 2997083

2010-05-10 Sergio Martin  <sergio.martin@artica.es>

	* godmode/agentes/massive_operations.php: Fixed the
	header using now the print_header function for
	bug: 2999269

2010-05-09 Raúl Mateos <raulofpandora@gmail.com>

	* godmode/setup/file_manager.php: Changed deprecated split() function to
	explode(). Center delete image.

	* modules/manage_network_components.php: Center delete image.

2010-05-07  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php, include/fgraph.php,
          include/functions_db.php, include/functions_fsgraph.php: Fixed
          a lot of chart and report code related to Pandora FMS's data
          compression algorithm.

2010-05-07 Sergio Martin  <sergio.martin@artica.es>

	* godmode/servers/manage_recontask_form.php: Included
	the help icon into the header for bug: 2997559

2010-05-07  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_prediction_source_module.php: Added a missing
	help file.

2010-05-06 Raúl Mateos <raulofpandora@gmail.com>

	* include/config*.php: Updated year. Updated build.

	* include/functions_*.php: Updated year. Clean Code.

2010-05-06 Miguel de Dios  <miguel.dedios@artica.es>

	* include/config.inc.php: fixed the operation require when the php file to
	call config.php have a file with same name of "config_process.php" ...in
	rare cases.
	
	* include/config_process.php: fixed the operation require when the php file
	to call config.php have a file with same name of "functions.php",
	"functions_db.php", "functions_config.php" ...in rare cases. 
	